--- a/src/frontend/src/assets/sass/style.scss
+++ b/src/frontend/src/assets/sass/style.scss
@@ -4,7 +4,22 @@
 
 // Set your colors
 $primary: #83be06;
+$primary-invert: findColorInvert($primary);
 $orange: #f27930;
+
+// Setup $colors to use as bulma classes (e.g. 'is-twitter')
+$colors: (
+    "white": ($white, $black),
+    "black": ($black, $white),
+    "light": ($light, $light-invert),
+    "dark": ($dark, $dark-invert),
+    "primary": ($primary, $primary-invert),
+    "info": ($info, $info-invert),
+    "success": ($success, $success-invert),
+    "warning": ($warning, $warning-invert),
+    "danger": ($danger, $danger-invert),
+    "twitter": ($twitter, $twitter-invert)
+);
 
 // Links
 $link: $primary;
