--- a/src/frontend/assets/scss/main.scss
+++ b/src/frontend/assets/scss/main.scss
@@ -5,7 +5,8 @@
 // Set your colors
 $primary: #83be06;
 $primary-invert: findColorInvert($primary);
-$orange: #f27930;
+$secondary: #f27930;
+$secondary-invert: findColorInvert($secondary);
 
 // Setup $colors to use as bulma classes (e.g. 'is-twitter')
 $colors: (
@@ -18,6 +19,7 @@ $colors: (
     "success": ($success, $success-invert),
     "warning": ($warning, $warning-invert),
     "danger": ($danger, $danger-invert),
+    "secondary": ($secondary, $secondary-invert),
 );
 
 // Links
